# Graphics

./: .gitmodules  CMakeLists.txt  README  turnitin.py
sources/: Application.cpp  Application.h  Bezier.cpp  Bezier.h  Object.cpp  Object.h  main.cpp
sources_1/: Application.cpp  Application.h
sources_2/: Application.h  main.cpp
sources_3/: main.cpp
